src/objects/GDC_Live__x.object
<CustomObject>
    <description>GDC Live</description>
    <externalDataSource>ExternalDS_MIKA</externalDataSource>
    <externalName>GDC Live</externalName>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval Status</description>
        <externalDeveloperName>Approval Status</externalDeveloperName>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>Business Group</description>
        <externalDeveloperName>Business Group</externalDeveloperName>
        <label>Business Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>Business Line</description>
        <externalDeveloperName>Business Line</externalDeveloperName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category</description>
        <externalDeveloperName>Category</externalDeveloperName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Customer</description>
        <externalDeveloperName>Customer</externalDeveloperName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Steps__c</fullName>
        <description>Diagnostic Steps</description>
        <externalDeveloperName>Diagnostic Steps</externalDeveloperName>
        <label>Diagnostic Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <description>Domain Name</description>
        <externalDeveloperName>Domain Name</externalDeveloperName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified__c</fullName>
        <description>Last Modified</description>
        <externalDeveloperName>Last Modified</externalDeveloperName>
        <label>Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meaning_Of_The_Alarm__c</fullName>
        <description>Meaning Of The Alarm</description>
        <externalDeveloperName>Meaning Of The Alarm</externalDeveloperName>
        <label>Meaning Of The Alarm</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisites__c</fullName>
        <description>Prerequisites</description>
        <externalDeveloperName>Prerequisites</externalDeveloperName>
        <label>Prerequisites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Product Family</description>
        <externalDeveloperName>Product Family</externalDeveloperName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <externalDeveloperName>Product Name</externalDeveloperName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <description>Product Version</description>
        <externalDeveloperName>Product Version</externalDeveloperName>
        <label>Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <description>Risks</description>
        <externalDeveloperName>Risks</externalDeveloperName>
        <label>Risks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>Solution</description>
        <externalDeveloperName>Solution</externalDeveloperName>
        <label>Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <description>Tags</description>
        <externalDeveloperName>Tags</externalDeveloperName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <description>Workaround</description>
        <externalDeveloperName>Workaround</externalDeveloperName>
        <label>Workaround</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tc_Name__c</fullName>
        <description>tc Name</description>
        <externalDeveloperName>tc Name</externalDeveloperName>
        <label>tc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDC Live</label>
    <pluralLabel>GDC Live</pluralLabel>
</CustomObject>